@@ -24,11 +24,13 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Component;
 import org.thingsboard.server.common.data.StringUtils;
 import org.thingsboard.server.common.data.TbTransportService;
+import org.thingsboard.server.common.data.job.JobType;
 import org.thingsboard.server.common.data.util.CollectionsUtil;
 import org.thingsboard.server.common.msg.queue.ServiceType;
 import org.thingsboard.server.gen.transport.TransportProtos;
 import org.thingsboard.server.gen.transport.TransportProtos.ServiceInfo;
 import org.thingsboard.server.queue.edqs.EdqsConfig;
+import org.thingsboard.server.queue.task.TaskProcessor;
 import org.thingsboard.server.queue.util.AfterContextReady;
 
 import java.net.InetAddress;
@@ -40,7 +42,12 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-import static org.thingsboard.common.util.SystemUtil.*;
+import static org.thingsboard.common.util.SystemUtil.getCpuCount;
+import static org.thingsboard.common.util.SystemUtil.getCpuUsage;
+import static org.thingsboard.common.util.SystemUtil.getDiscSpaceUsage;
+import static org.thingsboard.common.util.SystemUtil.getMemoryUsage;
+import static org.thingsboard.common.util.SystemUtil.getTotalDiscSpace;
+import static org.thingsboard.common.util.SystemUtil.getTotalMemory;
 
 
 @Component
@@ -59,14 +66,20 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
     @Value("${service.rule_engine.assigned_tenant_profiles:}")
     private Set<UUID> assignedTenantProfiles;
 
-    @Autowired
+    @Autowired(required = false)
     private EdqsConfig edqsConfig;
 
     @Autowired
     private ApplicationContext applicationContext;
 
+    @Autowired(required = false)
+    private List<TaskProcessor<?, ?>> availableTaskProcessors;
+
     private List<ServiceType> serviceTypes;
+    private List<JobType> taskTypes;
     private ServiceInfo serviceInfo;
+
+    private boolean ready = true;
 
     @PostConstruct
     public void init() {
@@ -78,18 +91,24 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
             }
         }
         log.info("Current Service ID: {}", serviceId);
-        if (serviceType.equalsIgnoreCase("monolith")) {
-            serviceTypes = List.of(ServiceType.values());
-        } else {
-            serviceTypes = Collections.singletonList(ServiceType.of(serviceType));
-        }
+        serviceTypes = isMonolith() ?
+                List.of(ServiceType.values()) :
+                Collections.singletonList(ServiceType.of(serviceType));
         if (!serviceTypes.contains(ServiceType.TB_RULE_ENGINE) || assignedTenantProfiles == null) {
             assignedTenantProfiles = Collections.emptySet();
         }
         if (serviceTypes.contains(ServiceType.EDQS)) {
+            ready = false;
             if (StringUtils.isBlank(edqsConfig.getLabel())) {
                 edqsConfig.setLabel(serviceId);
             }
+        }
+        if (CollectionsUtil.isNotEmpty(availableTaskProcessors)) {
+            taskTypes = availableTaskProcessors.stream()
+                    .map(TaskProcessor::getJobType)
+                    .toList();
+        } else {
+            taskTypes = Collections.emptyList();
         }
 
         generateNewServiceInfoWithCurrentSystemInfo();
@@ -114,6 +133,11 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
     }
 
     @Override
+    public boolean isMonolith() {
+        return serviceType.equalsIgnoreCase("monolith");
+    }
+
+    @Override
     public boolean isService(ServiceType serviceType) {
         return serviceTypes.contains(serviceType);
     }
@@ -127,8 +151,19 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
         if (CollectionsUtil.isNotEmpty(assignedTenantProfiles)) {
             builder.addAllAssignedTenantProfiles(assignedTenantProfiles.stream().map(UUID::toString).collect(Collectors.toList()));
         }
-        builder.setLabel(edqsConfig.getLabel());
+        if (edqsConfig != null) {
+            builder.setLabel(edqsConfig.getLabel());
+        }
+        builder.setReady(ready);
+        builder.addAllTaskTypes(taskTypes.stream().map(JobType::name).toList());
         return serviceInfo = builder.build();
+    }
+
+    @Override
+    public boolean setReady(boolean ready) {
+        boolean changed = this.ready != ready;
+        this.ready = ready;
+        return changed;
     }
 
     private TransportProtos.SystemInfoProto getCurrentSystemInfoProto() {
